Added or updated CavePaintingsTest, ShamanicRitualTest, HuntTest, ShamanicRitualTest and minor fixes.